feat: Added java bindings